# pi-lnn

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: ablation_re1000_norff.toml  ablation_re1000_phaseanchor_1k.toml  deeponet_cfc_long.toml  deeponet_cfc_midlong_sigma4_tokenattn.toml  deeponet_cfc_midlong_uvomega_small_soap_sf_5000.toml  deeponet_cfc_re10000_chebyshev.toml  deeponet_cfc_re10000_chebyshev_only.toml  deeponet_cfc_re10000_normalize_only.toml  deeponet_cfc_re10000_wide_v2.toml  deeponet_cfc_re10000_wide_v2_cfc2res.toml  deeponet_cfc_re10000_xlarge.toml  deeponet_cfc_re10000_xlarge_5000.toml  deeponet_cfc_re10000_xlarge_chebyshev.toml  deeponet_cfc_smoke.toml  exp_008_re1000_small_baseline.toml  exp_011_re1000_notm.toml  exp_014_re1000_phaseanchor.toml  exp_015_re1000_temporal_anchor.toml  exp_021_re1000_periodicfft.toml  exp_022_re1000_isotropicattn.toml  exp_023_re1000_isotropicattn_5k.toml  exp_024_re1000_schedulefree.toml  exp_025_re1000_schedulefree_5k.toml  exp_026_re1000_soap.toml  exp_027_re1000_soap_5k.toml  exp_028_re1000_soap_sf.toml  exp_029_re1000_cfc2layers.toml  exp_030_re1000_soap_sf_5k.toml  exp_031_re10000_wide.toml  exp_032_re10000_wide_cfc2layers.toml  exp_033_re10000_xlarge.toml  exp_035_re10000_chebyshev_normalize.toml  exp_035b_re10000_xlarge_chebyshev_normalize.toml  exp_036_re10000_normalize_only.toml  exp_037_re10000_chebyshev_only.toml  exp_038_re10000_poisson.toml  exp_039_re10000_poisson_01.toml  exp_040_re10000_transfer.toml  exp_041_re1000_wide.toml  exp_042_re10000_transfer_wide.toml  (+34 more)
(+51 files in other folders)
