[project]
name = "pi-o-net"
version = "0.1.0"
description = "Sparse-data DeepONet + CfC for Kolmogorov flow reconstruction."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "deepxde>=1.14,<2.0",
  "numpy>=2.2",
  "scipy>=1.10",
  "torch>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
pit-ldc-train = "pi_onet.pit_ldc:main"
lnn-kolmogorov-train = "pi_onet.lnn_kolmogorov:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_onet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
