[project]
name = "pi-o-net"
version = "0.1.0"
description = "Sparse-data DeepONet + CfC for Kolmogorov flow reconstruction."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "deepxde>=1.14,<2.0",
  "numpy>=2.2",
  "scipy>=1.10",
  "torch>=2.6",
  "schedulefree>=1.4",
  "optuna>=4.8.0",
  "wandb>=0.25.1",
  "pywavelets>=1.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
lnn-kolmogorov-train = "lnn_kolmogorov:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
